# vgfx-rs

./: .gitignore  Cargo.toml  notes.txt
BlueprintGen/: gen.py
LiveLoader/: Cargo.toml
LiveLoader/src/: main.rs
LiveLoader/src/data/: mod.rs  model.rs  world.rs
LiveLoader/src/file_watcher/: file_notify.rs  mod.rs
TexturePackager/: TexturePackager.sln
TexturePackager/TexturePackager/: MainForm.Designer.cs  MainForm.cs  MainForm.resx  PackageFile.cs  Program.cs  TextureFactory.cs  TexturePackager.csproj
TexturePackager/TexturePackager/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
model_parse/: parse.py  test.prs
src/: main.rs
src/dep/: events.rs
src/geo/: color_cuboid.rs  cuboid.rs  label.rs  label_2d.rs  mod.rs  plane.rs  quad.rs
src/gfx/: camera.rs  shader.rs  text.rs  texture.rs
src/mode/: demo.rs  edit.rs  world_editor.rs
src/model/: model.rs  sub_model.rs
src/sdl/: window.rs
src/shaders/: color.vert  fragment.frag  fragment.glvs  fragment.vert  texture.glvs
src/utils/: bfile.rs  cstring_util.rs  mod.rs  state.rs
vgfx/: Cargo.toml
vgfx/model_parse/: parse.py
vgfx/src/: main.rs
vgfx/src/dep/: events.rs
vgfx/src/editor/: ceiling_crud.rs  editor.rs  floor_crud.rs  mod.rs  terrain_crud.rs  texture_crud.rs  wall_crud.rs
vgfx/src/geo/: color_cuboid.rs  color_polygon.rs  label.rs  label_2d.rs  line.rs  mod.rs  plane.rs  quad.rs  texture_polygon.rs
vgfx/src/gfx/: camera.rs  face.rs  mod.rs  shader.rs  skybox.rs  text.rs  texture.rs  texture_group.rs  texture_group_buffer.rs
vgfx/src/mode/: demo.rs  edit.rs  mod.rs  world_editor.rs
vgfx/src/model/: ceiling.rs  floor.rs  mesh.rs  mod.rs  model.rs  sub_model.rs  wall.rs
vgfx/src/sdl/: window.rs
vgfx/src/shaders/: color.frag  color.vert  fragment.frag  fragment.vert  skybox.frag  skybox.vert  texture.frag  texture.vert
vgfx/src/utils/: bfile.rs  mod.rs  octo.rs  state.rs  vec_ops.rs
vgfx/src/world/: map.rs  map_data.rs  mod.rs  player.rs  world.rs  world_model.rs
