[package]
name = "LiveLoader"
version = "0.1.0"
authors = ["dustingibson <dustingibson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.0"
notify = "4.0.17"
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"